# weave-qa-demo

./: .env.template  .gitignore  .mailmap  README.md  __init__.py  leaderboard_support.py  main.py  models.py  part1_prompt_versioning.py  part2_evaluation_logger.py  part3_evaluation.py  pharma_demo.py  pharmaceutical_qa_demo.py  plan.md  pyproject.toml  scorers.py  test_model_variants.py  test_simple_model.py
.claude/: settings.local.json
qa_demo/: leaderboard_support.py  main.py  part1_prompt_versioning.py  part2_evaluation_logger.py  part3_evaluation.py  refactor.md  scorers.py
qa_demo/templates/: qa_investigation.jinja
templates/: qa_investigation.jinja
